# regression_library

./: .gitignore  README.md  main.py  pyproject.toml
animate/: __init__.py  track.py
data_blog/: __init__.py  data.py  utils.py
data_blog/animate/: track.py
data_blog_regression.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
regression_library/: data.py  linear_regression.py  utils.py
tests/: test_linear.py
