[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-blog-regression"
version = "0.1.0"
description = "From-scratch linear and multiple regression library for the Data Blog portfolio"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]
dependencies = [
  "numpy>=1.21"
]
